# vinil

./: CMakeLists.txt  Doxyfile.in  README.md  generate-dataset.sh
samples/: CMakeLists.txt  create_vhd.c  read_vhd.c  write_vhd.c
src/: CMakeLists.txt  crossplatform.c  crossplatform.h  util.h  vhd.c  vhd.h
tests/: CMakeLists.txt  check_vhd.c
tests/data/: dataset.tgz
